<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_breakfasts"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/main_drawer_item_community_breakfasts" />
        <item
            android:id="@+id/nav_lunches"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/main_drawer_item_community_lunches" />
        <item
            android:id="@+id/nav_dinners"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/main_drawer_item_community_dinners" />
        <item
            android:id="@+id/nav_community_daily_diets"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/main_drawer_item_community_daily_diet" />
    </group>

    <item android:title="@string/main_drawer_additional">
        <menu>
            <item
                android:id="@+id/nav_snacks"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/main_drawer_item_snacks" />
            <item
                android:id="@+id/nav_drinks_cocktails"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/main_drawer_item_drinks_cocktails" />
        </menu>
    </item>

</menu>
